--- a/pom.xml
+++ b/pom.xml
@@ -170,13 +170,13 @@
     </build>
 
     <properties>
-		<!-- snapshot revision
-        <revision>1.0-SNAPSHOT</revision>
-        <lt-revision>6.5-SNAPSHOT</lt-revision>
-         -->
-		<!-- release revision -->
+		<!-- snapshot revision -->
+        <revision>1.1-SNAPSHOT</revision>
+        <lt-revision>6.6-SNAPSHOT</lt-revision>
+		<!-- release revision
         <revision>1.0</revision>
         <lt-revision>6.5</lt-revision>
+         -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
