--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-http-client</artifactId>
-            <version>RELEASE</version>
+            <version>${lt-revision}</version>
         </dependency>
         <dependency>
             <groupId>org.openoffice</groupId>
