--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>${flatlaf.version}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
@@ -179,8 +184,8 @@
         <lt-revision>6.5</lt-revision>
          -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <timestamp>${maven.build.timestamp}</timestamp>
         <!-- <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format> -->
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss Z</maven.build.timestamp.format>
@@ -203,6 +208,7 @@
         <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
         <dependency-check-maven.pluging.version>7.4.4</dependency-check-maven.pluging.version>
         <flatten.version>1.4.1</flatten.version>
+        <flatlaf.version>3.5.4</flatlaf.version>
         <sortpom-maven.plugin.version>3.2.1</sortpom-maven.plugin.version>
     </properties>
 
