--- a/pom.xml
+++ b/pom.xml
@@ -58,27 +58,27 @@
             <version>${lt-revision}</version>
         </dependency>
         <dependency>
-            <groupId>org.openoffice</groupId>
+            <groupId>org.libreoffice</groupId>
             <artifactId>juh</artifactId>
-            <version>4.1.2</version>
+            <version>${office.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.openoffice</groupId>
+            <groupId>org.libreoffice</groupId>
             <artifactId>jurt</artifactId>
-            <version>4.1.2</version>
+            <version>${office.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.openoffice</groupId>
+            <groupId>org.libreoffice</groupId>
             <artifactId>ridl</artifactId>
-            <version>4.1.2</version>
+            <version>${office.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.openoffice</groupId>
+            <groupId>org.libreoffice</groupId>
             <artifactId>unoil</artifactId>
-            <version>4.1.2</version>
+            <version>${office.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -86,6 +86,16 @@
             <artifactId>flatlaf</artifactId>
             <version>${flatlaf.version}</version>
         </dependency>
+		<dependency>
+		    <groupId>org.libreoffice.ext</groupId>
+		    <artifactId>unohelper</artifactId>
+		    <version>${unohelper.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>${jsoup.version}</version>
+		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -213,6 +223,9 @@
         <dependency-check-maven.pluging.version>7.4.4</dependency-check-maven.pluging.version>
         <flatten.version>1.4.1</flatten.version>
         <flatlaf.version>3.5.4</flatlaf.version>
+        <unohelper.version>5.0.3</unohelper.version>
+        <jsoup.version>1.18.3</jsoup.version>
+        <office.version>5.0.3</office.version>
         <sortpom-maven.plugin.version>3.2.1</sortpom-maven.plugin.version>
     </properties>
 
