--- a/pom.xml
+++ b/pom.xml
@@ -58,25 +58,25 @@
             <version>${lt-revision}</version>
         </dependency>
         <dependency>
-            <groupId>org.libreoffice</groupId>
+            <groupId>${office.id}</groupId>
             <artifactId>juh</artifactId>
             <version>${office.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.libreoffice</groupId>
+            <groupId>${office.id}</groupId>
             <artifactId>jurt</artifactId>
             <version>${office.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.libreoffice</groupId>
+            <groupId>${office.id}</groupId>
             <artifactId>ridl</artifactId>
             <version>${office.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.libreoffice</groupId>
+            <groupId>${office.id}</groupId>
             <artifactId>unoil</artifactId>
             <version>${office.version}</version>
             <scope>provided</scope>
@@ -227,7 +227,12 @@
         <flatlaf.version>3.5.4</flatlaf.version>
         <unohelper.version>5.0.3</unohelper.version>
         <jsoup.version>1.18.3</jsoup.version>
-        <office.version>5.0.3</office.version>
+        <office.id>org.openoffice</office.id>
+        <office.version>4.1.2</office.version>
+<!--
+        <office.id>org.libreoffice</office.id>
+        <office.version>5.0.3</office.version>   
+-->
         <sortpom-maven.plugin.version>3.2.1</sortpom-maven.plugin.version>
     </properties>
 
