--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>LATEST</version>
+        </dependency>
     </dependencies>
 
     <build>
