--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,8 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-http-client</artifactId>
-            <version>${lt-revision}-SNAPSHOT</version>
+            <version>${lt-revision}</version>
+<!--            <version>${lt-revision}-SNAPSHOT</version>   -->
         </dependency>
         <dependency>
             <groupId>org.openoffice</groupId>
@@ -188,14 +189,14 @@
     </build>
 
     <properties>
-		<!-- snapshot revision 
-        <revision>1.2-SNAPSHOT</revision>
-        <lt-revision>6.6-SNAPSHOT</lt-revision>
-         -->
-		<!-- release revision -->
+		<!-- snapshot revision -->
+        <revision>1.3-SNAPSHOT</revision>
+        <lt-revision>6.7-SNAPSHOT</lt-revision>
+        
+		<!-- release revision
         <revision>1.2</revision>
         <lt-revision>6.6</lt-revision>
-        
+         -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
